logs the changes preventing me from checking out master branch, who knows?

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 html {
   background-color: rgba(221, 172, 171);
 }
-
+/*font-family: museo-sans-rounded,sans-serif!important;*/
 .soon {
   background-color: rgba(220, 20, 60, 0.5);
   color: (94, 37, 24);
