adds various messages which allow me to change branch

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,10 @@ body {
     border-style: solid;
     border-color: rgb(94, 37, 24);
 }
+
+.pig p {
+  margin: 10px;
+}
+ #pigs {
+  padding: 20px;
+ }
