makes many changes in terms of partitioning the different parts to toggle and hide after adding planning comments in js, some changes made to story text, images are yet to be added

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,3 +28,15 @@ body {
  #pigs {
   padding: 20px;
  }
+
+ .playdetails {
+   display: block;
+ }
+
+ #pigs {
+   display: block;
+ }
+
+ #refresh {
+   display: block;
+ }
