adds attractive css styling to images and general contents of pigs div

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4960,7 +4960,8 @@ a.badge:focus {
   padding-bottom: 30px;
   margin-bottom: 30px;
   color: inherit;
-  background-color: #eee;
+  
+  background-color: rgb(221, 172, 171);
 }
 .jumbotron h1,
 .jumbotron .h1 {
@@ -4997,6 +4998,7 @@ a.badge:focus {
   .jumbotron .h1 {
     font-size: 63px;
   }
+
 }
 .thumbnail {
   display: block;
