--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,41 @@
-img {
-    width: 200px;
-    padding: 20px;
-    border-style: solid;
-    border-color: rgb(94, 37, 24);
-}
-
 .soon {
     font-family: monospace;
     width: 100%;
     background-color: rgb(221, 172, 171);
-    margin-bottom: 20px;
+    margin: 10px;
     border-style: groove;
 }
+a {
+    color: rgb(131, 36, 55);
+    font-weight: bold;
+}
+.r1 {
+    color: rgb(131, 36, 55);
+    background-color: rgba(221, 172, 171, 0.7);
+    border-radius: 20%;
+    text-shadow: rgb(94, 37, 24);
+    height:400px;
+    margin: 0px;
+    border-style: dashed;
+    border-color: rgb(131, 36, 55);
+}
 
+.r1 h1 {
+    font-weight: 600;
+}
 
+em {
+    font-weight: 100;
+  }
+.r2 {
+    margin-top: -5px;
+}
+img {
+    height: 300px;
+    padding: 20px;
+    border-style: solid;
+    border-color: rgb(94, 37, 24);
+}
 body {
     text-align: center;
     margin: 20px 40px 40px;
@@ -23,20 +45,45 @@ body {
 }
 
 .pig p {
-  margin: 10px;
+    margin: 10px;
 }
  #pigs {
-  padding: 20px;
-  display: none;
+    padding: 20px;
+    display: none;
+    color: rgb(131, 36, 55);
+    text-shadow: 2px 1px rgb(131, 36, 55);
+    font-weight: bold;
+ }
+#pigs img {
+    padding:1px;
+    border:1px solid rgba(240, 128, 128);
+    background-color:#ff0;
+}
+p.names {
+    text-shadow: 1px 1px black;
+    font-weight: bold;
+    background-color: rgba(240, 128, 128, 0.7);
+    color: white;
+    border-style: solid;
+    border-color: white;
+    border-radius: 20%;
  }
 
  .playdetails {
-   display: none;
+     display: none;
  }
 
 .col-sm-2 p {
-  font-size: 13px;
+    font-size: 13px;
 }
  #refresh {
-   display: block;
+     display: none;
+ }
+
+ .instructions {
+    background-color: rgba(221, 172, 171, 0.7);
+    border-radius: 20%;
+    text-shadow: rgb(94, 37, 24);
+    padding: 20px;
+    margin-bottom: 22px;
  }
