--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,9 @@ body {
     border:1px solid rgba(240, 128, 128);
     background-color:#ff0;
 }
+#pigs label{
+    color: white;
+}
 p.names {
     text-shadow: 1px 1px black;
     font-weight: bold;
@@ -87,3 +90,26 @@ p.names {
     padding: 20px;
     margin-bottom: 22px;
  }
+ h3 {
+     margin-top: 10px;
+     text-shadow: 1px 1px black;
+     font-weight: bold;
+     background-color: rgba(240, 128, 128, 0.7);
+     color: white;
+     border-style: solid;
+     border-color: white;
+     border-radius: 20%;
+ }
+h3.score {
+    width: auto;
+}
+ #winPara {
+     font-size: 15px;
+     text-shadow: 1px 1px black;
+     font-weight: bold;
+     background-color: rgba(240, 128, 128, 0.7);
+     color: white;
+     border-style: solid;
+     border-color: white;
+     border-radius: 20%;
+}
